apps/base/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
    - name: ssh
      port: 2022
      targetPort: ssh
      protocol: TCP
  selector:
    app.kubernetes.io/name: gitea
  type: ClusterIP
